added grafana json endpoints
